<resources>
    <string name="app_name">RecomendAutos</string>
    <string name="app_version">Recomendautos v0.9.6</string>
    <string name="app_info">UPIITA-IPN 2020</string>
    <string name="app_developer_email">marcoarojas.95@gmail.com</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Nombre de Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_person_name">Nombre Personal</string>
    <string name="prompt_email">Correo electronico</string>
    <string name="prompt_repeat_password">Repite contraseña</string>

    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_up">Registrarse</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">Nombre de usuario debe contener almenos 2 caracteres</string>
    <string name="existing_username">El nombre de usuario ya esta en uso</string>
    <string name="invalid_password">La contraseña debe ser mayor a 5 caracteres</string>
    <string name="invalid_password2">La contraseña debe ser la misma</string>
    <string name="error_password">Contraseña de usuario incorrecta</string>
    <string name="invalid_email">El correo electronico es erroneo</string>
    <string name="login_failed">"Error al inicair sesión, usuario o contraseña incorrectos"</string>
    <string name="signup_title">Nuevo Registro</string>
    <string name="signup_or_text">ó</string>

    <string name="logout_text">Cerrar sesión</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_recommendations">Recomendacion</string>
    <string name="title_history">Historial</string>
    <string name="title_profile">Perfil</string>

    <string name="start_text_recom">Empezar</string>
    <string name="send_data_recom">Enviar</string>
    <string name="see_more_btn">Ir a sitio web</string>

    <string name="message_start_recommender"> Para recibir recomendaciones deberás completar el formulario que se te precentará a continuación, el cuál tiene el propósito de recolectar información sobre tus preferencias y necesidades en cuanto a automoviles, esta nformación será enviada al servidor donde se procesará para identificar tu perfil y brindarte resultados personalizados. </string>
    <string name="objective"> Recuerda que las recomendaciones emitidas, tienen como objetivo guiarte y brindarte un punto de partida sobre el tipo de automoviles que deberias considerar al momento de decidirte a comprar uno</string>
    <string name="title_form">Selecciona la opción que creas más adecuada para cada pregunta, tomando en cuanta tu contexto de vida actual, asi como preferencias y necesidades. Al finalizar presiona Enviar</string>

    <string name="no_history">Actualmente no cuentas con un historial de recomendaciones.</string>
</resources>